# RavenStore

./: .env.example  .gitignore  DEPLOYMENT.md  DESIGN_SYSTEM.md  INSTALLATION.md  OPERATIONS.md  PRODUCTION_CHECKLIST.md  SECURITY.md  TESTING.md  render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202607030001_initial_schema.py  202607040001_payment_automation.py  202607040002_realtime_events.py  202607040003_production_hardening.py  202607050001_final_integration.py  202607050002_referral_codes.py  202607060001_wallet_system.py
apps/api/app/: main.py  seed.py
apps/api/app/core/: config.py  crypto.py  database.py  dependencies.py  errors.py  events.py  i18n.py  logging.py  network.py  observability.py  resilience.py  security.py  tracing.py
apps/api/app/db/: base.py
apps/api/app/infrastructure/: __init__.py  redis_runtime.py
apps/api/app/integrations/: payment_verifiers.py  supabase_storage.py
apps/api/app/locales/: ar.json  en.json
apps/api/app/middleware/: audit.py  cache.py  idempotency.py  rate_limit.py  security.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/repositories/: base.py
apps/api/app/schemas/: auth.py  automation.py  catalog.py  common.py  misc.py  orders.py  payments.py  telegram.py  users.py
apps/api/app/services/: analytics.py  audit.py  auth.py  catalog.py  configuration.py  delivery_providers.py  fraud.py  fulfillment.py  inventory.py  ledger.py  localization.py  orders.py  outbox.py  payment_confirmation.py  payments.py  settings.py  support.py  (+1 more)
apps/api/docs/: events.md
apps/api/tests/: conftest.py  test_api_security_contract.py  test_auth_integration.py  test_payment_automation.py  test_realtime_events.py  test_security_hardening.py  test_wallet.py
apps/bot/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  pyproject.toml
apps/bot/raven_bot/: bot_factory.py  config.py  domain.py  i18n.py  logging.py  main.py  states.py
apps/bot/tests/: conftest.py  test_bot_client.py
(+155 files in other folders)
