[project]
name = "ravenstore-api"
version = "0.1.0"
description = "RavenStore backend source of truth API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "argon2-cffi>=23.1.0",
  "asyncpg>=0.29.0",
  "bcrypt>=4.2.0",
  "cryptography>=43.0.1",
  "fastapi>=0.115.0",
  "email-validator>=2.2.0",
  "httpx>=0.27.2",
  "orjson>=3.10.7",
  "opentelemetry-exporter-otlp-proto-http>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-instrumentation-httpx>=0.49b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
  "opentelemetry-sdk>=1.28.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "prometheus-client>=0.21.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "SQLAlchemy>=2.0.35",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.8",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
