[project]
name = "ravenstore-bot"
version = "0.1.0"
description = "Premium Telegram bot client for RavenStore"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.16.0",
  "aiohttp>=3.10.10",
  "httpx>=0.27.2",
  "orjson>=3.10.7",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "redis>=5.0.8",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["raven_bot*"]

[tool.ruff]
line-length = 100
target-version = "py312"
